<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note"/>

    <EditText
        android:id="@+id/updateText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:hint="Update text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="updateNote"
                android:alpha="0"
                android:text="@string/update"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:onClick="cancelUpdate"
                android:text="@string/cancel" />
        </LinearLayout>


</LinearLayout>
