<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFAFA"
    android:orientation="vertical"
    tools:context=".Drawing.DrawingActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/start_new"
            android:src="@drawable/ic_control_point_white_24dp" />

        <ImageButton
            android:id="@+id/paintButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/brush"
            android:src="@drawable/ic_brush_white_24dp" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/erase"
            android:src="@drawable/ic_delete_white_24dp" />

        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/save"
            android:src="@drawable/ic_save_white_24dp" />


    </LinearLayout>

    <com.androidarchitecture.learn.noteapplication.Drawing.DrawingView
        android:id="@+id/drawingView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        tools:background="#FFFAF0"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <!-- Top Row -->
        <LinearLayout
            android:id="@+id/paint_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#FF660000"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/ic_brush_white_24dp"
                android:tag="#FF660000" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#FFFF0000"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/ic_brush_white_24dp"
                android:tag="#FFFF0000" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#FFFF6600"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/ic_brush_white_24dp"
                android:tag="#FFFF6600" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#FFFFCC00"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/ic_brush_white_24dp"
                android:tag="#FFFFCC00" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#FF009900"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/ic_brush_white_24dp"
                android:tag="#FF009900" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#FF009999"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/ic_brush_white_24dp"
                android:tag="#FF009999" />

        </LinearLayout>
        <!-- Bottom Row -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#FF0000FF"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/ic_brush_white_24dp"
                android:tag="#FF0000FF" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#FF990099"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/ic_brush_white_24dp"
                android:tag="#FF990099" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#FFFF6666"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/ic_brush_white_24dp"
                android:tag="#FFFF6666" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#FFFFFFFF"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/ic_brush_black_24dp"
                android:tag="#FFFFFFFF" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#FF787878"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/ic_brush_white_24dp"
                android:tag="#FF787878" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#FF000000"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/ic_brush_white_24dp"
                android:tag="#FF000000" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>